// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`errors throws error on incomplete config definition 1`] = `
"PrismaParsingError: Expected identifier

  1 | 
  2 |       generator client {
> 3 |         
    |         ^
"
`;

exports[`errors throws error on incomplete document 1`] = `
"PrismaParsingError: Expected field name

  1 | 
  2 |       model Foo {
> 3 |         
    |         ^
"
`;

exports[`errors throws error on incomplete field definition 1`] = `
"PrismaParsingError: Expected field type

  2 |       model Foo {
  3 |           name
> 4 |       }
    |       ^
  5 |         
"
`;

exports[`errors throws error on missing { 1`] = `
"PrismaParsingError: Expected {

  1 | 
> 2 |       model Foo @attr {
    |                 ^
  3 |         name Int
  4 |       }
  5 |         
"
`;

exports[`errors throws error on missing config value 1`] = `
"PrismaParsingError: Expected expression

  2 |       datasource db1 {
  3 |         option =
> 4 |       }
    |       ^
  5 |         
"
`;

exports[`errors throws error on missing model name 1`] = `
"PrismaParsingError: Expected model name

  1 | 
> 2 |       model {
    |             ^
  3 |         name Int
  4 |       }
  5 |         
"
`;

exports[`errors throws error on unexpected token 1`] = `
"PrismaParsingError: Unexpected token

  1 | 
> 2 |       model Foo [
    |                 ^
  3 |           name Int
  4 |       ]
  5 |         
"
`;

exports[`parses prisma example schema 1`] = `
Object {
  "definitions": Array [
    Object {
      "fields": Array [
        Object {
          "attributes": Array [
            Object {
              "kind": "Attribute",
              "location": Object {
                "end": Object {
                  "column": 17,
                  "line": 2,
                  "offset": 29,
                },
                "start": Object {
                  "column": 14,
                  "line": 2,
                  "offset": 26,
                },
              },
              "name": "@id",
            },
          ],
          "kind": "FieldDefinition",
          "location": Object {
            "end": Object {
              "column": 17,
              "line": 2,
              "offset": 29,
            },
            "start": Object {
              "column": 3,
              "line": 2,
              "offset": 15,
            },
          },
          "name": Object {
            "identifier": "id",
            "kind": "Identifier",
            "location": Object {
              "end": Object {
                "column": 5,
                "line": 2,
                "offset": 17,
              },
              "start": Object {
                "column": 3,
                "line": 2,
                "offset": 15,
              },
            },
          },
          "type": Object {
            "kind": "Type",
            "location": Object {
              "end": Object {
                "column": 13,
                "line": 2,
                "offset": 25,
              },
              "start": Object {
                "column": 10,
                "line": 2,
                "offset": 22,
              },
            },
            "modifier": "none",
            "name": Object {
              "identifier": "Int",
              "kind": "Identifier",
              "location": Object {
                "end": Object {
                  "column": 13,
                  "line": 2,
                  "offset": 25,
                },
                "start": Object {
                  "column": 10,
                  "line": 2,
                  "offset": 22,
                },
              },
            },
          },
        },
        Object {
          "attributes": Array [],
          "kind": "FieldDefinition",
          "location": Object {
            "end": Object {
              "column": 16,
              "line": 3,
              "offset": 45,
            },
            "start": Object {
              "column": 3,
              "line": 3,
              "offset": 32,
            },
          },
          "name": Object {
            "identifier": "name",
            "kind": "Identifier",
            "location": Object {
              "end": Object {
                "column": 7,
                "line": 3,
                "offset": 36,
              },
              "start": Object {
                "column": 3,
                "line": 3,
                "offset": 32,
              },
            },
          },
          "type": Object {
            "kind": "Type",
            "location": Object {
              "end": Object {
                "column": 16,
                "line": 3,
                "offset": 45,
              },
              "start": Object {
                "column": 10,
                "line": 3,
                "offset": 39,
              },
            },
            "modifier": "none",
            "name": Object {
              "identifier": "String",
              "kind": "Identifier",
              "location": Object {
                "end": Object {
                  "column": 16,
                  "line": 3,
                  "offset": 45,
                },
                "start": Object {
                  "column": 10,
                  "line": 3,
                  "offset": 39,
                },
              },
            },
          },
        },
        Object {
          "attributes": Array [],
          "kind": "FieldDefinition",
          "location": Object {
            "end": Object {
              "column": 16,
              "line": 4,
              "offset": 61,
            },
            "start": Object {
              "column": 3,
              "line": 4,
              "offset": 48,
            },
          },
          "name": Object {
            "identifier": "email",
            "kind": "Identifier",
            "location": Object {
              "end": Object {
                "column": 8,
                "line": 4,
                "offset": 53,
              },
              "start": Object {
                "column": 3,
                "line": 4,
                "offset": 48,
              },
            },
          },
          "type": Object {
            "kind": "Type",
            "location": Object {
              "end": Object {
                "column": 16,
                "line": 4,
                "offset": 61,
              },
              "start": Object {
                "column": 10,
                "line": 4,
                "offset": 55,
              },
            },
            "modifier": "none",
            "name": Object {
              "identifier": "String",
              "kind": "Identifier",
              "location": Object {
                "end": Object {
                  "column": 16,
                  "line": 4,
                  "offset": 61,
                },
                "start": Object {
                  "column": 10,
                  "line": 4,
                  "offset": 55,
                },
              },
            },
          },
        },
        Object {
          "attributes": Array [],
          "kind": "FieldDefinition",
          "location": Object {
            "end": Object {
              "column": 14,
              "line": 5,
              "offset": 75,
            },
            "start": Object {
              "column": 3,
              "line": 5,
              "offset": 64,
            },
          },
          "name": Object {
            "identifier": "age",
            "kind": "Identifier",
            "location": Object {
              "end": Object {
                "column": 6,
                "line": 5,
                "offset": 67,
              },
              "start": Object {
                "column": 3,
                "line": 5,
                "offset": 64,
              },
            },
          },
          "type": Object {
            "kind": "Type",
            "location": Object {
              "end": Object {
                "column": 14,
                "line": 5,
                "offset": 75,
              },
              "start": Object {
                "column": 10,
                "line": 5,
                "offset": 71,
              },
            },
            "modifier": "optional",
            "name": Object {
              "identifier": "Int",
              "kind": "Identifier",
              "location": Object {
                "end": Object {
                  "column": 13,
                  "line": 5,
                  "offset": 74,
                },
                "start": Object {
                  "column": 10,
                  "line": 5,
                  "offset": 71,
                },
              },
            },
          },
        },
        Object {
          "attributes": Array [],
          "kind": "FieldDefinition",
          "location": Object {
            "end": Object {
              "column": 16,
              "line": 6,
              "offset": 91,
            },
            "start": Object {
              "column": 3,
              "line": 6,
              "offset": 78,
            },
          },
          "name": Object {
            "identifier": "posts",
            "kind": "Identifier",
            "location": Object {
              "end": Object {
                "column": 8,
                "line": 6,
                "offset": 83,
              },
              "start": Object {
                "column": 3,
                "line": 6,
                "offset": 78,
              },
            },
          },
          "type": Object {
            "kind": "Type",
            "location": Object {
              "end": Object {
                "column": 16,
                "line": 6,
                "offset": 91,
              },
              "start": Object {
                "column": 10,
                "line": 6,
                "offset": 85,
              },
            },
            "modifier": "array",
            "name": Object {
              "identifier": "Post",
              "kind": "Identifier",
              "location": Object {
                "end": Object {
                  "column": 14,
                  "line": 6,
                  "offset": 89,
                },
                "start": Object {
                  "column": 10,
                  "line": 6,
                  "offset": 85,
                },
              },
            },
          },
        },
      ],
      "kind": "ModelDefinition",
      "location": Object {
        "end": Object {
          "column": 2,
          "line": 7,
          "offset": 93,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "name": Object {
        "identifier": "User",
        "kind": "Identifier",
        "location": Object {
          "end": Object {
            "column": 11,
            "line": 1,
            "offset": 10,
          },
          "start": Object {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
        },
      },
    },
    Object {
      "fields": Array [
        Object {
          "attributes": Array [
            Object {
              "kind": "Attribute",
              "location": Object {
                "end": Object {
                  "column": 19,
                  "line": 10,
                  "offset": 126,
                },
                "start": Object {
                  "column": 16,
                  "line": 10,
                  "offset": 123,
                },
              },
              "name": "@id",
            },
          ],
          "kind": "FieldDefinition",
          "location": Object {
            "end": Object {
              "column": 19,
              "line": 10,
              "offset": 126,
            },
            "start": Object {
              "column": 3,
              "line": 10,
              "offset": 110,
            },
          },
          "name": Object {
            "identifier": "id",
            "kind": "Identifier",
            "location": Object {
              "end": Object {
                "column": 5,
                "line": 10,
                "offset": 112,
              },
              "start": Object {
                "column": 3,
                "line": 10,
                "offset": 110,
              },
            },
          },
          "type": Object {
            "kind": "Type",
            "location": Object {
              "end": Object {
                "column": 15,
                "line": 10,
                "offset": 122,
              },
              "start": Object {
                "column": 12,
                "line": 10,
                "offset": 119,
              },
            },
            "modifier": "none",
            "name": Object {
              "identifier": "Int",
              "kind": "Identifier",
              "location": Object {
                "end": Object {
                  "column": 15,
                  "line": 10,
                  "offset": 122,
                },
                "start": Object {
                  "column": 12,
                  "line": 10,
                  "offset": 119,
                },
              },
            },
          },
        },
        Object {
          "attributes": Array [],
          "kind": "FieldDefinition",
          "location": Object {
            "end": Object {
              "column": 18,
              "line": 11,
              "offset": 144,
            },
            "start": Object {
              "column": 3,
              "line": 11,
              "offset": 129,
            },
          },
          "name": Object {
            "identifier": "title",
            "kind": "Identifier",
            "location": Object {
              "end": Object {
                "column": 8,
                "line": 11,
                "offset": 134,
              },
              "start": Object {
                "column": 3,
                "line": 11,
                "offset": 129,
              },
            },
          },
          "type": Object {
            "kind": "Type",
            "location": Object {
              "end": Object {
                "column": 18,
                "line": 11,
                "offset": 144,
              },
              "start": Object {
                "column": 12,
                "line": 11,
                "offset": 138,
              },
            },
            "modifier": "none",
            "name": Object {
              "identifier": "String",
              "kind": "Identifier",
              "location": Object {
                "end": Object {
                  "column": 18,
                  "line": 11,
                  "offset": 144,
                },
                "start": Object {
                  "column": 12,
                  "line": 11,
                  "offset": 138,
                },
              },
            },
          },
        },
        Object {
          "attributes": Array [],
          "kind": "FieldDefinition",
          "location": Object {
            "end": Object {
              "column": 18,
              "line": 12,
              "offset": 162,
            },
            "start": Object {
              "column": 3,
              "line": 12,
              "offset": 147,
            },
          },
          "name": Object {
            "identifier": "content",
            "kind": "Identifier",
            "location": Object {
              "end": Object {
                "column": 10,
                "line": 12,
                "offset": 154,
              },
              "start": Object {
                "column": 3,
                "line": 12,
                "offset": 147,
              },
            },
          },
          "type": Object {
            "kind": "Type",
            "location": Object {
              "end": Object {
                "column": 18,
                "line": 12,
                "offset": 162,
              },
              "start": Object {
                "column": 12,
                "line": 12,
                "offset": 156,
              },
            },
            "modifier": "none",
            "name": Object {
              "identifier": "String",
              "kind": "Identifier",
              "location": Object {
                "end": Object {
                  "column": 18,
                  "line": 12,
                  "offset": 162,
                },
                "start": Object {
                  "column": 12,
                  "line": 12,
                  "offset": 156,
                },
              },
            },
          },
        },
        Object {
          "attributes": Array [],
          "kind": "FieldDefinition",
          "location": Object {
            "end": Object {
              "column": 16,
              "line": 13,
              "offset": 178,
            },
            "start": Object {
              "column": 3,
              "line": 13,
              "offset": 165,
            },
          },
          "name": Object {
            "identifier": "author",
            "kind": "Identifier",
            "location": Object {
              "end": Object {
                "column": 9,
                "line": 13,
                "offset": 171,
              },
              "start": Object {
                "column": 3,
                "line": 13,
                "offset": 165,
              },
            },
          },
          "type": Object {
            "kind": "Type",
            "location": Object {
              "end": Object {
                "column": 16,
                "line": 13,
                "offset": 178,
              },
              "start": Object {
                "column": 12,
                "line": 13,
                "offset": 174,
              },
            },
            "modifier": "none",
            "name": Object {
              "identifier": "User",
              "kind": "Identifier",
              "location": Object {
                "end": Object {
                  "column": 16,
                  "line": 13,
                  "offset": 178,
                },
                "start": Object {
                  "column": 12,
                  "line": 13,
                  "offset": 174,
                },
              },
            },
          },
        },
      ],
      "kind": "ModelDefinition",
      "location": Object {
        "end": Object {
          "column": 2,
          "line": 14,
          "offset": 180,
        },
        "start": Object {
          "column": 1,
          "line": 9,
          "offset": 95,
        },
      },
      "name": Object {
        "identifier": "Post",
        "kind": "Identifier",
        "location": Object {
          "end": Object {
            "column": 11,
            "line": 9,
            "offset": 105,
          },
          "start": Object {
            "column": 7,
            "line": 9,
            "offset": 101,
          },
        },
      },
    },
  ],
  "kind": "Document",
  "location": Object {
    "end": Object {
      "column": 1,
      "line": 15,
      "offset": 181,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
}
`;
